# zuri

./: .gitignore
stage_2/: DOCUMENTATION.md  README.md  Spacefile  database.db  main.py  pyproject.toml  requirements.txt
stage_2/models/: __init__.py  base_model.py  person.py
stage_2/models/engine/: db_storage.py  file_storage.py
stage_2/tests/: test_person.py
